--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -23,8 +23,23 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
       
+      - name: Download active signals
+        uses: actions/cache@v4
+        with:
+          path: active_signals.json
+          key: active-signals-${{ github.run_id }}
+          restore-keys: |
+            active-signals-
+      
       - name: Run ORB scan
         env:
           TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
           CHAT_ID: ${{ secrets.CHAT_ID }}
         run: python scan_once.py
+      
+      - name: Save active signals
+        uses: actions/cache/save@v4
+        if: always()
+        with:
+          path: active_signals.json
+          key: active-signals-${{ github.run_id }}
